--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <header class="header">
-      <!-- Logo con link a la página principal -->
-      <a href="/" class="logo">
-        <img src="https://cdn.pixabay.com/photo/2017/03/16/21/18/logo-2150297_640.png" alt="Matcha"/>
-      </a>
-      <!-- Menú de navegación -->
-      <nav class="navbar">
-        <ul>
-          <li>Platform</li>
-          <li>Pricing</li>
-          <li>Customers</li>
-          <li>About</li>
-        </ul>
-      </nav>
-      <!-- Contenedor de acciones de usuario -->
-      <div class="actions">
-        <a>Sign In</a>
-        <button>Start free trial</button>
-      </div>
-    </header>
+    <section class="fixed-header">
+      <header class="header">
+        <!-- Logo con link a la página principal -->
+        <a href="/" class="logo">
+          <img src="https://cdn.pixabay.com/photo/2017/03/16/21/18/logo-2150297_640.png" alt="Matcha"/>
+        </a>
+        <!-- Menú de navegación -->
+        <nav class="navbar">
+          <ul>
+            <li>Platform</li>
+            <li>Pricing</li>
+            <li>Customers</li>
+            <li>About</li>
+          </ul>
+        </nav>
+        <!-- Contenedor de acciones de usuario -->
+        <div class="actions">
+          <a>Sign In</a>
+          <button>Start free trial</button>
+        </div>
+      </header>
+    </section>
+
     <section class="main">
       <!-- Esto es lo que se verá en el navegador web -->
       <h1><i>Build your blog. Build your <strong>business</strong></i></h1>
@@ -45,6 +48,34 @@
       <div style="text-align: center;">
         <img src="https://assets.bedu.org/contents/TECM0017FRFUV2_Fronted_fundamentals_V2/TECM0017FRFUV2_S1_3_1.png" alt="imagen" width="500" height="300">
       </div>
+    </section>
+    <section class="promo">
+      <article class="explanatory-video">
+        <video controls poster="https://acortar.link/0VzfR5">
+          <!--<source>-->
+          <source type="video/webm" src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"/>
+          <source type="video/mp4"  src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"/>
+        </video>
+        <img src="https://acortar.link/IbOTaB" alt="See how it works"/>
+      </article>
+      
+      <article class="publish">
+        <h3>Publish to your blog in minutes, not hours.</h3>
+        <p>
+          Your blog is your most powerful asset to build, engage, and retain a loyal
+          audience. But you don’t have hours to create content that may or may not
+          work. With Matcha, instantly publish from our library of 10,000+
+          professionally written articles and build your email list faster with our
+          powerful conversion tool.
+        </p>
+        <form>
+          <p>Start publishing today:</p>
+          <div>
+            <input type="text" placeholder="Enter email"/>
+            <button>Start My Trial</button>
+          </div>
+        </form>
+      </article>
     </section>
 </body>
 </html>
