--- a/index.html
+++ b/index.html
@@ -77,5 +77,35 @@
         </form>
       </article>
     </section>
+    <section class="biografia">
+      <article class="TextAside">
+        <h2>Growing ecomerce brands rely on Matcha</h2>
+        <p>Starting a business is one of the most exciting and rewarding 
+          experiences you can have. But where do you begin? There are several 
+          ways to approach creating a business, with many important considerations. 
+          To help take the guesswork out of the process and improve your chances 
+          of success, follow our comprehensive guide on how to start a business. 
+          We’ll walk you through each step of the process, from defining your 
+          business idea to registering, launching and growing your business.</p>
+          <button>What Kind of Business</button>
+          <div>
+            <img src="https://acortar.link/8clVqd" width="100px"/>
+            <img src="https://acortar.link/ThPCJX" width="300px"/>
+            <img src="https://acortar.link/1dRjnO" width="300px"/>
+            <img src="https://acortar.link/6MCjHp" width="200px"/>
+          </div>
+      </article>
+      <article class="comboPinterest">
+        <img src="https://acortar.link/q0aCKo"/>
+        <h4>Suiza</h4>
+        <p>Business tools can help make your life easier and make your business run more 
+          smoothly. The right tools can help you save time, automate tasks and make better decisions.</p>
+        <div class="contentPinterest">
+          <img src="https://acortar.link/H4DakA"/>
+          <p> Up to 70% Off Selected Products at H&M</p>
+        </div>
+        <button>Start free trial</button>
+        </article>
+    </section>
 </body>
 </html>
