se agregan cambios de sesion 4

--- a/index.html
+++ b/index.html
@@ -107,5 +107,80 @@
         <button>Start free trial</button>
         </article>
     </section>
+    <section class="features">
+      <article class="feature-card Item1-1">
+        <div class="feature-content">
+          <figure>
+            <img
+              src="https://acortar.link/ogMabh"
+              alt="Publish icon"
+            />
+          </figure>
+          <h3>Fill your blog with engaging articles.</h3>
+          <p>
+            Publish to your blog in less time than it takes to drink your
+            morning coffee.
+          </p>
+          <a href="">Publish instantly →</a>
+        </div>
+        <div class="feature-image">
+          <figure>
+            <img
+              src="https://acortar.link/WDKFLJ"
+              alt="Publish example"
+            />
+          </figure>
+        </div>
+      </article>
+      <article class="feature-card Item1-2">
+        <div class="feature-content">
+          <h3>What Kind of Business Should You Start?</h3>
+          <p>
+            Before you choose the type of business to start, there are some key things to consider:
+          </p>
+          <ul>
+            <li type="square">What type of funding do you have?</li>
+            <li type="square">What interests and passions do you have?</li>
+            <li type="square">What skills or expertise do you have?</li>
+          </ul>
+          <a href="https://www.123test.com/competency-test/">Take this Competency test →</a>
+        </div>
+        <div class="feature-imageItem1-2">
+          <figure>
+            <img
+              src="https://acortar.link/U14aGD" width="170px" height="150px" alt="Thinking"/>
+          </figure>
+        </div>
+      </article>
+      <article class="feature-card Item2-1">
+        <div class="feature-imageItem2-1">
+          <figure>
+            <img
+              src="https://acortar.link/yFM32K" width="170px" height="150px" alt="Coworking"/>
+          </figure>
+        </div>
+        <div class="feature-content">
+          <h3>Create Your Business Plan</h3>
+          <p>
+            A business plan is a dynamic document that serves as a roadmap for establishing a new business.
+            This document makes it simple for potential investors, financial institutions and company 
+            management to understand and absorb. Even if you intend to self-finance, a business plan can help 
+            you flesh out your idea and spot potential problems. 
+          </p>
+          <a href="https://www.forbes.com/advisor/business/how-to-write-a-business-plan/">How to write a business plan? →</a>
+        </div>
+      </article>
+      <article class="feature-card Item2-2">
+        <div class="feature-content">
+          <h3>Helpful Resources</h3>
+          <ul class="moreLinks">
+            <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-set-up-an-llc-in-7-steps/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">How To set up an LLC in 7 Steps</a></li>
+            <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-start-a-sole-proprietorship/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">How To Start a Sole Proprietorship</a></li>
+            <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-start-a-corporation/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">To Start a Corporation</a></li>
+            <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-start-a-nonprofit/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">How To Start a Nonprofit</a></li>
+          </ul>
+        </div>
+      </article>
+    </section>
 </body>
 </html>
