--- a/index.html
+++ b/index.html
@@ -3,184 +3,187 @@
   <head>
     <!-- Aquí va información importante pero no visible dentro del navegador -->
     <title>Build your business</title>
-    <meta charset="UFT-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsive.css">
+    <meta name="viewport" charset="UFT-8" content="width=device-width,initial-scale=1.0,user-scalable=no"/>
   </head>
   <body>
-    <section class="fixed-header">
-      <header class="header">
-        <!-- Logo con link a la página principal -->
-        <a href="/" class="logo">
-          <img src="https://cdn.pixabay.com/photo/2017/03/16/21/18/logo-2150297_640.png" alt="Matcha"/>
-        </a>
-        <!-- Menú de navegación -->
-        <nav class="navbar">
-          <ul>
-            <li>Platform</li>
-            <li>Pricing</li>
-            <li>Customers</li>
-            <li>About</li>
-          </ul>
-        </nav>
-        <!-- Contenedor de acciones de usuario -->
-        <div class="actions">
-          <a>Sign In</a>
-          <button>Start free trial</button>
-        </div>
-      </header>
-    </section>
-
-    <section class="main">
-      <!-- Esto es lo que se verá en el navegador web -->
-      <h1><i>Build your blog. Build your <strong>business</strong></i></h1>
-      <h2>How To Start A Business In 11 Steps</h2>
-      <h3>by Kathy Haan, <strong>Forbes</strong> <small>Advisor</small></h3>
-      <form>
-          <input type="email" />
-          <button type="submit">
-            Try it now &rarr;
-          </button>
-          <p>Type your email to subscribe</p>
-      </form>
-      <div style="text-align: center;">
-          <img src="https://acortar.link/2coQz9" alt="imagen" width="150" height="200">
-      </div>
-      <div style="text-align: center;">
-        <img src="https://assets.bedu.org/contents/TECM0017FRFUV2_Fronted_fundamentals_V2/TECM0017FRFUV2_S1_3_1.png" alt="imagen" width="500" height="300">
-      </div>
-    </section>
-    <section class="promo">
-      <article class="explanatory-video">
-        <video controls poster="https://acortar.link/0VzfR5">
-          <!--<source>-->
-          <source type="video/webm" src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"/>
-          <source type="video/mp4"  src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"/>
-        </video>
-        <img src="https://acortar.link/IbOTaB" alt="See how it works"/>
-      </article>
-      
-      <article class="publish">
-        <h3>Publish to your blog in minutes, not hours.</h3>
-        <p>
-          Your blog is your most powerful asset to build, engage, and retain a loyal
-          audience. But you don’t have hours to create content that may or may not
-          work. With Matcha, instantly publish from our library of 10,000+
-          professionally written articles and build your email list faster with our
-          powerful conversion tool.
-        </p>
+    <div id="main-container">
+      <section class="fixed-header">
+        <header class="header">
+          <!-- Logo con link a la página principal -->
+          <a href="/" class="logo">
+            <img src="https://cdn.pixabay.com/photo/2017/03/16/21/18/logo-2150297_640.png" alt="Matcha"/>
+          </a>
+          <!-- Menú de navegación -->
+          <nav class="navbar">
+            <ul>
+              <li>Platform</li>
+              <li>Pricing</li>
+              <li>Customers</li>
+              <li>About</li>
+            </ul>
+          </nav>
+          <!-- Contenedor de acciones de usuario -->
+          <div class="actions">
+            <a>Sign In</a>
+            <button>Start free trial</button>
+          </div>
+        </header>
+      </section>
+  
+      <section class="main">
+        <!-- Esto es lo que se verá en el navegador web -->
+        <h1><i>Build your blog. Build your <strong>business</strong></i></h1>
+        <h2>How To Start A Business In 11 Steps</h2>
+        <h3>by Kathy Haan, <strong>Forbes</strong> <small>Advisor</small></h3>
         <form>
-          <p>Start publishing today:</p>
-          <div>
-            <input type="text" placeholder="Enter email"/>
-            <button>Start My Trial</button>
-          </div>
+            <input type="email" />
+            <button type="submit">
+              Try it now &rarr;
+            </button>
+            <p>Type your email to subscribe</p>
         </form>
-      </article>
-    </section>
-    <section class="biografia">
-      <article class="TextAside">
-        <h2>Growing ecomerce brands rely on Matcha</h2>
-        <p>Starting a business is one of the most exciting and rewarding 
-          experiences you can have. But where do you begin? There are several 
-          ways to approach creating a business, with many important considerations. 
-          To help take the guesswork out of the process and improve your chances 
-          of success, follow our comprehensive guide on how to start a business. 
-          We’ll walk you through each step of the process, from defining your 
-          business idea to registering, launching and growing your business.</p>
-          <button>What Kind of Business</button>
-          <div>
-            <img src="https://acortar.link/8clVqd" width="100px"/>
-            <img src="https://acortar.link/ThPCJX" width="300px"/>
-            <img src="https://acortar.link/1dRjnO" width="300px"/>
-            <img src="https://acortar.link/6MCjHp" width="200px"/>
-          </div>
-      </article>
-      <article class="comboPinterest">
-        <img src="https://acortar.link/q0aCKo"/>
-        <h4>Suiza</h4>
-        <p>Business tools can help make your life easier and make your business run more 
-          smoothly. The right tools can help you save time, automate tasks and make better decisions.</p>
-        <div class="contentPinterest">
-          <img src="https://acortar.link/H4DakA"/>
-          <p> Up to 70% Off Selected Products at H&M</p>
+        <div style="text-align: center;">
+            <img src="https://acortar.link/2coQz9" alt="imagen" width="150" height="200">
         </div>
-        <button>Start free trial</button>
+        <div style="text-align: center;">
+          <img src="https://assets.bedu.org/contents/TECM0017FRFUV2_Fronted_fundamentals_V2/TECM0017FRFUV2_S1_3_1.png" alt="imagen" width="500" height="300">
+        </div>
+      </section>
+  
+      <section class="promo">
+        <article class="explanatory-video">
+          <video controls poster="https://acortar.link/0VzfR5">
+            <!--<source>-->
+            <source type="video/webm" src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"/>
+            <source type="video/mp4"  src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"/>
+          </video>
+          <img src="https://acortar.link/IbOTaB" alt="See how it works"/>
         </article>
-    </section>
-    <section class="features">
-      <article class="feature-card Item1-1">
-        <div class="feature-content">
-          <figure>
-            <img
-              src="https://acortar.link/ogMabh"
-              alt="Publish icon"
-            />
-          </figure>
-          <h3>Fill your blog with engaging articles.</h3>
+        
+        <article class="publish">
+          <h3>Publish to your blog in minutes, not hours.</h3>
           <p>
-            Publish to your blog in less time than it takes to drink your
-            morning coffee.
+            Your blog is your most powerful asset to build, engage, and retain a loyal
+            audience. But you don’t have hours to create content that may or may not
+            work. With Matcha, instantly publish from our library of 10,000+
+            professionally written articles and build your email list faster with our
+            powerful conversion tool.
           </p>
-          <a href="">Publish instantly →</a>
-        </div>
-        <div class="feature-image">
-          <figure>
-            <img
-              src="https://acortar.link/WDKFLJ"
-              alt="Publish example"
-            />
-          </figure>
-        </div>
-      </article>
-      <article class="feature-card Item1-2">
-        <div class="feature-content">
-          <h3>What Kind of Business Should You Start?</h3>
-          <p>
-            Before you choose the type of business to start, there are some key things to consider:
-          </p>
-          <ul>
-            <li type="square">What type of funding do you have?</li>
-            <li type="square">What interests and passions do you have?</li>
-            <li type="square">What skills or expertise do you have?</li>
-          </ul>
-          <a href="https://www.123test.com/competency-test/">Take this Competency test →</a>
-        </div>
-        <div class="feature-imageItem1-2">
-          <figure>
-            <img
-              src="https://acortar.link/U14aGD" width="170px" height="150px" alt="Thinking"/>
-          </figure>
-        </div>
-      </article>
-      <article class="feature-card Item2-1">
-        <div class="feature-imageItem2-1">
-          <figure>
-            <img
-              src="https://acortar.link/yFM32K" width="170px" height="150px" alt="Coworking"/>
-          </figure>
-        </div>
-        <div class="feature-content">
-          <h3>Create Your Business Plan</h3>
-          <p>
-            A business plan is a dynamic document that serves as a roadmap for establishing a new business.
-            This document makes it simple for potential investors, financial institutions and company 
-            management to understand and absorb. Even if you intend to self-finance, a business plan can help 
-            you flesh out your idea and spot potential problems. 
-          </p>
-          <a href="https://www.forbes.com/advisor/business/how-to-write-a-business-plan/">How to write a business plan? →</a>
-        </div>
-      </article>
-      <article class="feature-card Item2-2">
-        <div class="feature-content">
-          <h3>Helpful Resources</h3>
-          <ul class="moreLinks">
-            <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-set-up-an-llc-in-7-steps/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">How To set up an LLC in 7 Steps</a></li>
-            <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-start-a-sole-proprietorship/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">How To Start a Sole Proprietorship</a></li>
-            <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-start-a-corporation/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">To Start a Corporation</a></li>
-            <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-start-a-nonprofit/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">How To Start a Nonprofit</a></li>
-          </ul>
-        </div>
-      </article>
-    </section>
+          <form>
+            <p>Start publishing today:</p>
+            <div>
+              <input type="text" placeholder="Enter email"/>
+              <button>Start My Trial</button>
+            </div>
+          </form>
+        </article>
+      </section>
+  
+      <section class="biografia">
+        <article class="TextAside">
+          <h2>Growing ecomerce brands rely on Matcha</h2>
+          <p>Starting a business is one of the most exciting and rewarding 
+            experiences you can have. But where do you begin? There are several 
+            ways to approach creating a business, with many important considerations. 
+            To help take the guesswork out of the process and improve your chances 
+            of success, follow our comprehensive guide on how to start a business. 
+            We’ll walk you through each step of the process, from defining your 
+            business idea to registering, launching and growing your business.</p>
+            <button>What Kind of Business</button>
+            <div>
+              <img src="https://acortar.link/8clVqd" width="100px"/>
+              <img src="https://acortar.link/ThPCJX" width="300px"/>
+              <img src="https://acortar.link/1dRjnO" width="300px"/>
+              <img src="https://acortar.link/6MCjHp" width="200px"/>
+            </div>
+        </article>
+        <article class="comboPinterest">
+          <img src="https://acortar.link/q0aCKo"/>
+          <h4>Suiza</h4>
+          <p>Business tools can help make your life easier and make your business run more 
+            smoothly. The right tools can help you save time, automate tasks and make better decisions.</p>
+          <div class="contentPinterest">
+            <img src="https://acortar.link/H4DakA"/>
+            <p> Up to 70% Off Selected Products at H&M</p>
+          </div>
+          <button>Start free trial</button>
+          </article>
+      </section>
+  
+      <section class="features">
+        <article class="feature-card Item1-1">
+          <div class="feature-content">
+            <figure>
+              <img
+                src="https://acortar.link/ogMabh"
+                alt="Publish icon"
+              />
+            </figure>
+            <h3>Fill your blog with engaging articles.</h3>
+            <p>
+              Publish to your blog in less time than it takes to drink your
+              morning coffee.
+            </p>
+            <a href="">Publish instantly →</a>
+          </div>
+          <div class="feature-image">
+            <figure>
+              <img
+                src="https://acortar.link/WDKFLJ"
+                alt="Publish example"
+              />
+            </figure>
+          </div>
+        </article>
+        <article class="feature-card Item1-2">
+          <div class="feature-content">
+            <h3>What Kind of Business Should You Start?</h3>
+            <p>
+              Before you choose the type of business to start, there are some key things to consider:
+            </p>
+            <ul>
+              <li type="square">What type of funding do you have?</li>
+              <li type="square">What interests and passions do you have?</li>
+              <li type="square">What skills or expertise do you have?</li>
+            </ul>
+            <a href="https://www.123test.com/competency-test/">Take this Competency test →</a>
+          </div>
+          <div class="feature-imageItem1-2">
+              <img style="text-align: center;" src="https://acortar.link/vqnhiG" width="170px" height="150px" alt="Thinking"/>
+          </div>
+        </article>
+        <article class="feature-card Item2-1">
+          <div class="feature-imageItem2-1">
+            <figure>
+              <img style="text-align: center;" 
+                src="https://acortar.link/yFM32K" width="170px" height="150px" alt="Coworking"/>
+            </figure>
+          </div>
+          <div class="feature-content">
+            <h3>Create Your Business Plan</h3>
+            <p>
+              A business plan is a dynamic document that serves as a roadmap for establishing a new business.
+              This document makes it simple for potential investors, financial institutions and company 
+              management to understand and absorb. Even if you intend to self-finance, a business plan can help 
+              you flesh out your idea and spot potential problems. 
+            </p>
+            <a href="https://www.forbes.com/advisor/business/how-to-write-a-business-plan/">How to write a business plan? →</a>
+          </div>
+        </article>
+        <article class="feature-card Item2-2">
+          <div class="feature-content">
+            <h3>Helpful Resources</h3>
+            <ul class="moreLinks">
+              <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-set-up-an-llc-in-7-steps/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">How To set up an LLC in 7 Steps</a></li>
+              <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-start-a-sole-proprietorship/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">How To Start a Sole Proprietorship</a></li>
+              <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-start-a-corporation/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">To Start a Corporation</a></li>
+              <li type="disc"><a href="https://www.forbes.com/advisor/business/how-to-start-a-nonprofit/" style="text-decoration:none" onmouseover="style='text-decoration:underline'" onmouseout="style='text-decoration:none'">How To Start a Nonprofit</a></li>
+            </ul>
+          </div>
+        </article>
+      </section>
+    </div>
 </body>
 </html>
