--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Build your business</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta name="viewport" charset="UFT-8" content="width=device-width,initial-scale=1.0,user-scalable=no"/>
   </head>
   <body>
@@ -15,14 +16,39 @@
           <a href="/" class="logo">
             <img src="https://cdn.pixabay.com/photo/2017/03/16/21/18/logo-2150297_640.png" alt="Matcha"/>
           </a>
-          <!-- Menú de navegación -->
+          <!-- Menú de navegación Original
           <nav class="navbar">
             <ul>
               <li>Platform</li>
-              <li>Pricing</li>
+              <li><a href="pricing.html">Pricing</a></li>
               <li>Customers</li>
               <li>About</li>
             </ul>
+          </nav>-->
+          <!-- Menú de navegación BootStrap-->
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="features.html">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="pricing.html">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </nav>
           <!-- Contenedor de acciones de usuario -->
           <div class="actions">
@@ -184,6 +210,46 @@
           </div>
         </article>
       </section>
+      <!-- Sesion 5 estilos Bootstrap-->
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <!--Indicadores-->
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 5"></button>
+        </div>
+        <!--Contenido-->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://place-puppy.com/1200x500" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://place-puppy.com/1100x500" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://place-puppy.com/1000x500" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://place-puppy.com/1200x500" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://place-puppy.com/1150x500" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <!--Boton izq-->
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <!--Boton Derecho-->
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
