agrega cambios actualizacion sesion5

--- a/pricing.html
+++ b/pricing.html
@@ -15,7 +15,7 @@
                     <a class="nav-link" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="features.html">Features</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="#">Pricing</a>
@@ -31,8 +31,7 @@
         <h1>Pricing</h1>
 
         <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-primary">
-                <img scr="/shopyfy.svg" alt="..."></button>
+            <button type="button" class="btn btn-primary"><img src="/shopify.svg"></button>
             <button type="button" class="btn btn-primary"><img src="/wordpress.svg"></button>
             <button type="button" class="btn btn-primary">Right</button>
           </div>
