--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div id="main-container">
       <section class="fixed-header">
         <header class="header">
-          <!-- Logo con link a la página principal -->
+          <!-- Logo con link a la página principal 
           <a href="/" class="logo">
             <img src="https://cdn.pixabay.com/photo/2017/03/16/21/18/logo-2150297_640.png" alt="Matcha"/>
-          </a>
+          </a>-->
           <!-- Menú de navegación Original
           <nav class="navbar">
             <ul>
@@ -50,11 +50,11 @@
               </div>
             </div>
           </nav>
-          <!-- Contenedor de acciones de usuario -->
+          <!-- Contenedor de acciones de usuario 
           <div class="actions">
             <a>Sign In</a>
             <button>Start free trial</button>
-          </div>
+          </div>-->
         </header>
       </section>
   
@@ -118,7 +118,7 @@
             We’ll walk you through each step of the process, from defining your 
             business idea to registering, launching and growing your business.</p>
             <button>What Kind of Business</button>
-            <div>
+            <div class="marcas">
               <img src="https://acortar.link/8clVqd" width="100px"/>
               <img src="https://acortar.link/ThPCJX" width="300px"/>
               <img src="https://acortar.link/1dRjnO" width="300px"/>
@@ -217,8 +217,8 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 4"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
         </div>
         <!--Contenido-->
         <div class="carousel-inner">
@@ -226,16 +226,16 @@
             <img src="https://place-puppy.com/1200x500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://place-puppy.com/1100x500" class="d-block w-100" alt="...">
+            <img src="https://place-puppy.com/1199x500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://place-puppy.com/1000x500" class="d-block w-100" alt="...">
+            <img src="https://place-puppy.com/1201x500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://place-puppy.com/1200x500" class="d-block w-100" alt="...">
+            <img src="https://place-puppy.com/1198x500" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://place-puppy.com/1150x500" class="d-block w-100" alt="...">
+            <img src="https://place-puppy.com/1202x500" class="d-block w-100" alt="...">
           </div>
         </div>
         <!--Boton izq-->
