--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" charset="UFT-8" content="width=device-width,initial-scale=1.0,user-scalable=no"/>
   </head>
   <body>
     <div id="main-container">
-      <section class="fixed-header">
-        <header class="header">
-          <!-- Logo con link a la página principal 
+      <!--<section class="fixed-header">
+         <header class="header">
+           Logo con link a la página principal 
           <a href="/" class="logo">
             <img src="https://cdn.pixabay.com/photo/2017/03/16/21/18/logo-2150297_640.png" alt="Matcha"/>
           </a>-->
@@ -25,7 +26,7 @@
               <li>About</li>
             </ul>
           </nav>-->
-          <!-- Menú de navegación BootStrap-->
+          <!-- Menú de navegación BootStrap
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Navbar</a>
@@ -49,14 +50,48 @@
                 </ul>
               </div>
             </div>
-          </nav>
+          </nav>-->
           <!-- Contenedor de acciones de usuario 
           <div class="actions">
             <a>Sign In</a>
             <button>Start free trial</button>
-          </div>-->
-        </header>
-      </section>
+          </div>
+        </header>-->
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <a class="navbar-brand logo" href="#">
+              <i class="fa-regular fa-sun fa-beat fa-xl" style="color: #14a701;"></i>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Platform</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Customers</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Resources</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About us</a>
+                </li>
+              </ul>
+              <div class="actions">
+                <a href="#">Sign In</a>
+                <button>Start Free Trial</button>
+              </div>
+              </div>
+            </div>
+          </nav>
+
+      <!--</section>-->
   
       <section class="main">
         <!-- Esto es lo que se verá en el navegador web -->
