--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <button>Start free trial</button>
           </div>
         </header>-->
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand logo" href="#">
               <i class="fa-regular fa-sun fa-beat fa-xl" style="color: #14a701;"></i>
@@ -68,13 +68,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Platform</a>
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="/pricing.html">Pricing</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Customers</a>
+                  <a class="nav-link" href="/features.html">Features</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Resources</a>
