Agrega elementos ultima sesion zoom

--- a/features.html
+++ b/features.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="#">Resources</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-link" href="/aboutUS.html">About us</a>
               </li>
             </ul>
             <div class="actions">
