--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <a class="nav-link" href="#">Resources</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About us</a>
+                  <a class="nav-link" href="/aboutUS.html">About us</a>
                 </li>
               </ul>
               <div class="actions">
@@ -100,7 +100,7 @@
         <h3>by Kathy Haan, <strong>Forbes</strong> <small>Advisor</small></h3>
         <form>
             <input type="email" />
-            <button type="submit">
+            <button type="submit" class="texto-boton">
               Try it now &rarr;
             </button>
             <p>Type your email to subscribe</p>
